--- a/package.json
+++ b/package.json
@@ -13,10 +13,19 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@hapi/boom": "^9.1.3",
+    "babel-eslint": "^10.1.0",
     "dotenv": "^10.0.0",
     "dotenv-flow": "^3.2.0",
+    "eslint-config-standard": "^16.0.3",
+    "eslint-plugin-import": "^2.24.1",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-promise": "^5.1.0",
+    "eslint-plugin-standard": "^5.0.0",
     "express": "^4.17.1",
-    "mongodb": "^4.1.0"
+    "joi": "^17.4.2",
+    "mongodb": "^4.1.0",
+    "standard": "^16.0.3"
   },
   "devDependencies": {
     "eslint": "^7.32.0",
