--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
   "dependencies": {
     "@hapi/boom": "^9.1.3",
     "babel-eslint": "^10.1.0",
+    "bcrypt": "4.0.1",
+    "body-parser": "1.19.0",
     "dotenv": "^10.0.0",
     "dotenv-flow": "^3.2.0",
     "eslint-config-standard": "^16.0.3",
@@ -22,9 +24,15 @@
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^5.1.0",
     "eslint-plugin-standard": "^5.0.0",
-    "express": "^4.17.1",
+    "express": "4.17.1",
     "joi": "^17.4.2",
+    "jsonwebtoken": "8.5.1",
     "mongodb": "^4.1.0",
+    "mongoose": "5.9.15",
+    "morgan": "^1.10.0",
+    "passport": "0.4.1",
+    "passport-jwt": "4.0.0",
+    "passport-local": "1.0.0",
     "standard": "^16.0.3"
   },
   "devDependencies": {
