--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "set NODE_ENV=development && mocha --exit",
     "dev": "DEBUG=app:* NODE_ENV=development nodemon index",
     "start": "NODE_ENV=production node index",
     "prepare": "husky install"
@@ -41,8 +41,12 @@
     "eslint-plugin-prettier": "^3.4.0",
     "husky": "^7.0.1",
     "lint-staged": "^11.1.1",
+    "mocha": "^9.1.0",
     "nodemon": "^2.0.12",
-    "prettier": "^2.3.2"
+    "prettier": "^2.3.2",
+    "proxyquire": "^2.1.3",
+    "sinon": "^11.1.2",
+    "supertest": "^6.1.6"
   },
   "lint-staged": {
     "*.js": "eslint --cache --fix"
